# comparativa-regresion

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml
data/: README.md
src/: __init__.py  config.py  deploy.py  main.py
src/etl/: __init__.py  extract.py  load.py  transform.py
tests/: __init__.py  conftest.py  test_extract.py  test_load.py  test_transform.py
